--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>PORTIFÓLIO | Renan Nascimento</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
